--- a/index.html
+++ b/index.html
@@ -41,19 +41,26 @@
   </div>
 
   <div class="settingbox">
-    Presets:
+    Sound:</br>
+    <input type="radio" name="type" value=0 checked>Synth<br>
+    <input type="radio" name="type" value=1>Sampled piano<br>
+  </div>
+
+  <div class="settingbox">
+    Synth Presets:
     </br>
     <select id="presets">
       <option value="1">Mono</option>
-      <option value="2" selected>AM</option>
+      <option value="2">AM</option>
       <option value="3">Duo</option>
       <option value="4">FM</option>
       <option value="5">Membrane</option>
       <option value="6">Pluck</option>
+      <option value="7" selected>Piano</option>
     </select>
     </br>
   </div>
-  <button id="setButton">Set Synth</button>
+  <button id="setButton">Set Controller</button>
 </div>
 
 </br></br>
